# my-substrate-node-template

./: .gitignore  raw.json  rustfmt.toml  staging-raw.json  staging.json
node/: Cargo.toml  README.md
node/src/: chain_spec.rs  service.rs
pallets/kitties/: Cargo.toml  README.md  README_02.md
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/src/migrations/: mod.rs  v1.rs  v2.rs
pallets/ocw/: Cargo.toml  README.md
pallets/ocw/src/: lib.rs
pallets/ocw/webserver/: main.js
pallets/poe/: Cargo.toml  README.md
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
